Refactor: remove unused JNA PTT implementation and clean up dependencies
- Remove JNA and JNA-platform dependencies from pom.xml

- Update module-info.java to remove requires for com.sun.jna and com.sun.jna.platform

- Delete NativePttController.java (java.awt.Robot is the active PTT controller)

- Remove JNA imports, fallback logic, and native-related logs from EnvironmentValidator, InbuiltVoiceSynthesizer, SystemAudioRouter, and ValVoiceController

- Sanitize documentation in ReadFirst.md and TTS_Architecture.md to reflect actual runtime behavior

- Untrack build artifacts in target/ and dependency-reduced-pom.xml in compliance with .gitignore